--- a/cart.html
+++ b/cart.html
@@ -139,18 +139,122 @@
     </nav>
     <section class="section">
       <div class="container-md">
-        <div class="cart-box">
+        <div class="cart-box flex-column flex-md-row">
           <div class="about-cart">
-            <img src="" alt="" />
+            <img src="img/maldives.jpg" alt="" />
             <div class="cart-info">
-              <h6>إسم الخدمة</h6>
-              <p>
-                لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت
-                دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار لوريم ايبسوم
-                دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+              <h6 class="name">إسم الخدمة</h6>
+              <p class="des">
+                لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+                أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار
+                لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
               </p>
             </div>
           </div>
+          <div class="more-options">
+            <div class="quantity">
+              <p>الكمية</p>
+              <div class="quantity-holder">
+                <button class="add btn-quantity">+</button>
+                <span>05</span>
+                <button class="less btn-quantity">-</button>
+              </div>
+            </div>
+            <div class="date">
+              <p>تاريخ الحجز</p>
+              <span>2022/12/11</span>
+            </div>
+            <div class="price">
+              <p>السعر</p>
+              <span>230.0$</span>
+            </div>
+          </div>
+        </div>
+        <div class="cart-box flex-column flex-md-row">
+          <div class="about-cart">
+            <img src="img/decorated.webp" alt="" />
+            <div class="cart-info">
+              <h6 class="name">إسم الخدمة</h6>
+              <p class="des">
+                لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+                أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار
+                لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+              </p>
+            </div>
+          </div>
+          <div class="more-options">
+            <div class="quantity">
+              <p>الكمية</p>
+              <div class="quantity-holder">
+                <button class="add btn-quantity">+</button>
+                <span>08</span>
+                <button class="less btn-quantity">-</button>
+              </div>
+            </div>
+            <div class="date">
+              <p>تاريخ الحجز</p>
+              <span>2022/12/11</span>
+            </div>
+            <div class="price">
+              <p>السعر</p>
+              <span>230.0$</span>
+            </div>
+          </div>
+        </div>
+        <div class="cart-box flex-column flex-md-row">
+          <div class="about-cart">
+            <img src="img/foods.webp" alt="" />
+            <div class="cart-info">
+              <h6 class="name">إسم الخدمة</h6>
+              <p class="des">
+                لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+                أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار
+                لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج
+              </p>
+            </div>
+          </div>
+          <div class="more-options">
+            <div class="quantity">
+              <p>الكمية</p>
+              <div class="quantity-holder">
+                <button class="add btn-quantity">+</button>
+                <span>05</span>
+                <button class="less btn-quantity">-</button>
+              </div>
+            </div>
+            <div class="date">
+              <p>تاريخ الحجز</p>
+              <span>2022/12/11</span>
+            </div>
+            <div class="price">
+              <p>السعر</p>
+              <span>230.0$</span>
+            </div>
+          </div>
+        </div>
+        <div class="total-box">
+          <div>
+            <span> الضريبة </span>
+            <span>1000.20$</span>
+          </div>
+          <div>
+            <span> السعر الإجمالي </span>
+            <span>310.05$</span>
+          </div>
+          <div>
+            <span> المجموع </span>
+            <span>1310.25$</span>
+          </div>
+        </div>
+        <div class="btns-holder-card">
+          <a href="#" class="main-btn btn-alt">
+            <i class="fa-solid fa-file-invoice-dollar"></i>
+            عرض الفاتورة
+          </a>
+          <button class="main-btn btn-yellow">
+            <i class="fa-solid fa-truck"></i>
+            إرسال الطلبات
+          </button>
         </div>
       </div>
     </section>
