--- a/coordinator-1.html
+++ b/coordinator-1.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <nav class="top-nav py-2">
+    <nav class="top-nav py-2 not-print">
       <div class="container-md">
         <div class="nav-content">
           <div class="navbar">
@@ -159,7 +159,7 @@
         </form>
       </div>
     </section>
-    <header class="header" id="header">
+    <header class="header not-print" id="header">
       <nav class="navbar main-nav py-1">
         <div class="container-md">
           <ul
