--- a/coordinator-4.html
+++ b/coordinator-4.html
@@ -26,7 +26,7 @@
     />
   </head>
   <body>
-    <nav class="top-nav py-2">
+    <nav class="top-nav py-2 not-print">
       <div class="container-md">
         <div class="nav-content">
           <div class="navbar">
@@ -343,7 +343,7 @@
           </div>
       </div>
     </section>
-    <header class="header" id="header">
+    <header class="header not-print" id="header">
       <nav class="navbar main-nav py-1">
         <div class="container-md">
           <ul class="navbar-nav nav-menu align-items-center" id="nav-menu">
