--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
   </head>
   <body>
-    <nav class="top-nav py-2">
+    <nav class="top-nav py-2 not-print">
       <div class="container-md">
         <div class="nav-content">
           <div class="navbar">
@@ -488,7 +488,7 @@
       </div>
       <!-- End All ratings -->
     </section>
-    <header class="header" id="header">
+    <header class="header not-print" id="header">
       <nav class="navbar main-nav py-1">
         <div class="container-md">
           <ul
