--- a/invoice.html
+++ b/invoice.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <nav class="top-nav py-2">
+    <nav class="top-nav py-2 not-print">
       <div class="container-md">
         <div class="nav-content">
           <div class="navbar">
@@ -165,34 +165,42 @@
         </div>
         <hr>
         <div class="table-responsive">
-         <table class="table main-table-border">
-           <thead>
-            <tr>
-             <th>العنصر/المنتج</th>
-             <th>السعر</th>
-             <th>الكمية</th>
-             <th>الأجمالي</th>
-            </tr>
-           </thead>
-           <tbody>
-            <tr>
-             <td>إسم المنتج الأول</td>
-             <td>250$</td>
-             <td>05</td>
-             <td>500$</td>
-            </tr>
-            <tr>
-             <td>إسم المنتج الثاني</td>
-             <td>250$</td>
-             <td>05</td>
-             <td>500$</td>
-            </tr>
-           </tbody>
-         </table>
+         <div class="main-table-border">
+          <table class="table">
+            <thead>
+             <tr>
+              <th>العنصر/المنتج</th>
+              <th>السعر</th>
+              <th>الكمية</th>
+              <th>الأجمالي</th>
+             </tr>
+            </thead>
+            <tbody>
+             <tr>
+              <td>إسم المنتج الأول</td>
+              <td>250$</td>
+              <td>05</td>
+              <td>500$</td>
+             </tr>
+             <tr>
+              <td>إسم المنتج الثاني</td>
+              <td>250$</td>
+              <td>05</td>
+              <td>500$</td>
+             </tr>
+            </tbody>
+          </table>
+         </div>
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+         <a href="javascript:print()" class="main-btn">
+          <i class="fas fa-print"></i>
+          طباعة الفاتورة
+         </a>
         </div>
       </div>
     </section>
-    <header class="header" id="header">
+    <header class="header not-print" id="header">
       <nav class="navbar main-nav py-1">
         <div class="container-md">
           <ul
