--- a/cart.html
+++ b/cart.html
@@ -139,6 +139,7 @@
     </nav>
     <section class="section">
       <div class="container-md">
+        <h2 class="lg-title mb-4 text-center">طلباتي</h2>
         <div class="cart-box flex-column flex-md-row">
           <div class="about-cart">
             <img src="img/maldives.jpg" alt="" />
