--- a/notification.html
+++ b/notification.html
@@ -151,13 +151,63 @@
                                      <div class="d-flex flex-column gap-2">
                                          <a href="#" class="mb-0">
                                              <p class="content mb-0">
-                                             تجربة الأشعارات 
+                                              تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات 
                                              </p>
                                          </a>
                                          <div class="date-notification">
                                              <i class="fas fa-clock"></i>
                                              <span>
+                                             منذ ساعه
+                                             </span>
+                                             <p class="text-dark my-auto">
+                                                 تم القراءة
+                                             </p>
+                                     </div>
+
+                                 </div>
+
+                             </div>
+                         </div>
+                     </li>
+                         <li>
+                             <div class="notification_holder">
+                                 <div class="notification_text">
+                                     <i class="fa-solid fa-circle-exclamation icon-alert"></i>
+                                     <div class="d-flex flex-column gap-2">
+                                         <a href="#" class="mb-0">
+                                             <p class="content mb-0">
                                               تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات 
+                                             </p>
+                                         </a>
+                                         <div class="date-notification">
+                                             <i class="fas fa-clock"></i>
+                                             <span>
+                                             منذ ساعه
+                                             </span>
+                                             <p class="text-dark my-auto">
+                                                 تم القراءة
+                                             </p>
+                                     </div>
+
+                                 </div>
+
+                             </div>
+                         </div>
+                     </li>
+                         <li>
+                             <div class="notification_holder">
+                                 <div class="notification_text">
+                                     <i class="fa-solid fa-circle-exclamation icon-alert"></i>
+                                     <div class="d-flex flex-column gap-2">
+                                         <a href="#" class="mb-0">
+                                             <p class="content mb-0">
+                                              تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات تجربة الأشعارات 
+                                             </p>
+                                         </a>
+                                         <div class="date-notification">
+                                             <i class="fas fa-clock"></i>
+                                             <span>
+                                             منذ ساعه
                                              </span>
                                              <p class="text-dark my-auto">
                                                  تم القراءة
