--- a/myWallet.html
+++ b/myWallet.html
@@ -377,52 +377,34 @@
           </div>
         </div>
       </div>
-      <div class="container-md bg-white mt-5">
-        <div class="box-stock">
-          <div class="row g-3">
-            <div
-              class="col-md-3 col-sm-6 col-xs-12 text-center"
-              data-toggle="tooltip"
-              data-placement="bottom"
-              title=""
-              data-original-title="كامل الرصيد الموجود في حسابك الآن، يتضمن الأرباح والرصيد المعلّق أيضاً."
-            >
-              <h5>الرصيد الكلي</h5>
-              <div class="text-beta"><span dir="rtl">$0.00</span></div>
-            </div>
-            <div
-              class="col-md-3 col-sm-6 col-xs-12 text-center"
-              data-toggle="tooltip"
-              data-html="true"
-              data-placement="bottom"
-              title=""
-              data-original-title="يتضمن ميزانية مشاريعك قيد التنفيذ و أي مبلغ  طلبت سحبه ولا زال قيد التحويل، بالإضافة لأرباحك في 14 يوما الأخيرة."
-            >
-              <h5>الرصيد المعلق</h5>
-              <div class="text-beta"><span dir="rtl">$0.00</span></div>
-            </div>
-            <div
-              class="col-md-3 col-sm-6 col-xs-12 text-center"
-              data-toggle="tooltip"
-              data-placement="bottom"
-              title=""
-              data-original-title="الرصيد الذي يمكنك استخدامه لفتح مشاريع جديدة في مستقل."
-            >
-              <h5>الرصيد المتاح</h5>
-              <div class="text-beta"><span dir="rtl">$0.00</span></div>
-            </div>
-            <div
-              class="col-md-3 col-sm-6 col-xs-12 text-center"
-              data-toggle="tooltip"
-              data-placement="bottom"
-              title=""
-              data-original-title=" المبلغ المتبقي من الأرباح التي حققتها في مستقل ويمكنك سحبها الآن."
-            >
-              <h5>الرصيد القابل للسحب</h5>
-              <div class="text-beta"><span dir="rtl">$0.00</span></div>
-            </div>
+      <div class="container-md mt-5">
+        <div class="bg-grey py-3 mb-3">
+          <div class="row text-center row-gap-24 ">
+           <div class="col-6">
+               <p class="title mb-0">الرصيد الكلي</p>
+               <h5 class="content mb-0"><span>$25.00</span></h5>
+           </div>
+   
+           <div class="col-6">
+               <p class="title mb-0"> الرصيد المعلق
+              </p>
+               <h5 class="content mb-0"> <span>$25.00</span></h5>
+           </div>
+   
+           <div class="col-6 ">
+               <p class="title mb-0">الرصيد المتاح
+              </p>
+               <h5 class="content mb-0"> <span>$25.00</span></h5>
+           </div>
+           <div class="col-6 ">
+               <p class="title mb-0">الرصيد القابل للسحب
+
+              </p>
+               <h5 class="content mb-0"> <span>$25.00</span></h5>
+           </div>
+   
           </div>
-        </div>
+         </div>
       </div>
     </section>
     <header class="header not-print" id="header">
