--- a/profile.html
+++ b/profile.html
@@ -143,7 +143,37 @@
           </div>
         </div>
         <div class="title">
-            الاقسام والخدمات الموفرة
+            الاقسام الموفرة
+        </div>
+        <div class="container-md py-3">
+        <form action="">
+          <div class="d-flex align-items-center gap-2 flex-wrap  mb-2">
+            <label for="" class="d-flex align-items-center gap-1">
+              <input type="checkbox"class="form-check-input bg-inp-check" name="" id="">
+              test
+            </label>
+            <label for="" class="d-flex align-items-center gap-1">
+              <input type="checkbox"class="form-check-input bg-inp-check" name="" id="">
+              test
+            </label>
+            <label for="" class="d-flex align-items-center gap-1">
+              <input type="checkbox"class="form-check-input bg-inp-check" name="" id="">
+              test
+            </label>
+            <label for="" class="d-flex align-items-center gap-1">
+              <input type="checkbox"class="form-check-input bg-inp-check" name="" id="">
+              test
+            </label>
+          </div>
+          <div class="d-flex justify-content-center">
+            <a href="" class="main-btn">
+              حفظ
+            </a>
+          </div>
+        </form>
+        </div>
+        <div class="title">
+            الخدمات الموفرة
         </div>
         <div class="container-md py-3">
         <form action="">
