--- a/addTickets.html
+++ b/addTickets.html
@@ -139,56 +139,52 @@
     </nav>
     <section class="section box-section coordinator-section py-4 ">
       <div class="container-md">
-        <div class="text-center">
-          <h2 class="lg-title mb-2">كل الطلبات</h2>
+        <div class="text-center mb-3">
+          <h4 class="lg-title">إضافة تذكرة</h4>
         </div>
-        <div class="table-responsive">
-          <table class="main-table">
-            <thead>
-              <tr>
-                <th>عنوان الطلب</th>
-                <th>القسم الرئيسي</th>
-                <th>القسم الفرعي</th>
-                <th>الخدمة</th>
-                <th>الوصف</th>
-                <th>المرفقات</th>
-                <th>الحالة</th>
-                <th>التحكم</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>طلب جديد</td>
-                <td>رئيسي1</td>
-                <td>فرعي2</td>
-                <td>ديكور</td>
-                <td>عايزين ديكور حلو</td>
-                <td>مرفق1</td>
-                <td>مقعل</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>طلب جديد</td>
-                <td>رئيسي1</td>
-                <td>فرعي2</td>
-                <td>ديكور</td>
-                <td>عايزين ديكور حلو</td>
-                <td>مرفق1</td>
-                <td>مقعل</td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>طلب جديد</td>
-                <td>رئيسي1</td>
-                <td>فرعي2</td>
-                <td>ديكور</td>
-                <td>عايزين ديكور حلو</td>
-                <td>مرفق1</td>
-                <td>مقعل</td>
-                <td></td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="row g-3">
+          <div class="col-12 col-md-4">
+            <div class="main-inp">
+              <i class="icon fa-solid fa-bookmark"></i>
+              <input type="text" name="" id="" class="" placeholder="عنوان التذكرة" />
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="main-inp">
+              <label for="">
+                اختر موضوع التذكرة
+              </label>
+                <select name="" id="" class="form-select">
+                  <option value="">موضوع 1</option>
+                  <option value="">موضوع 2</option>
+                </select>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="main-inp">
+              <label for="" >الوصف</label>
+                <textarea class="main-textarea won" style="height: 90px"></textarea>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="main-inp p-0">
+              <label for="formFileMultiple" class="mb-1">
+                المرفقات
+              </label>
+              <input
+                class="form-control ps-2 pe-0 py-2"
+                type="file"
+                id="formFileMultiple"
+                multiple
+              />
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+              <button class="main-btn btn-yellow mx-auto mt-4">
+                <i class="fa-solid fa-circle-plus"></i>
+                إضافة
+              </button>
+          </div>
         </div>
       </div>
     </section>
